syntax = "proto3";

option go_package = "./playlist";

// Playlist request message
message PlaylistRequest {
  string id = 1;
  string userID = 2;
  string contentID = 3;
  enum Operation {
    ADD = 0;
    REMOVE = 1;
    GET = 2;
  }
  Operation operation = 4;
}

// Content response message
message Content {
  string id = 1;
  string title = 2;
  string genre = 3;
  string creator = 4; // Artist or Director
}

// Playlist response message
message PlaylistResponse {
  string userID = 1;
  string name = 2;
  repeated Content data = 3;
}

// gRPC service
service PlayListService {
  // Playlist management
  rpc Manage (stream PlaylistRequest) returns (stream PlaylistResponse);
}
